--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <p><strong>Broj frameova po beatu:</strong> <span id="rezultatFrameoviPoBeatu">0</span></p>
             <p><strong>Broj frameova po taktu:</strong> <span id="rezultatFrameoviPoTakatu">0</span></p>
             <p><strong>Postotak prilagodbe glazbe:</strong> <span id="rezultatPostotakPrilagodbe">0.00%</span></p>
+            <p><strong>Nova duljina glazbene datoteke:</strong> <span id="rezultatNovaDuljina">00:00:00:00</span></p>
             <p class="napomena" id="rezultatBrojBeatova">Ukupni broj beatova za ovo trajanje (zaokruženo): 0</p>
         </div>
     </div>
