--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BPM Sinkronizacija za Video</title>
     <link rel="stylesheet" href="style.css">
 
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/manifest.json">
 
     <script>
       if ('serviceWorker' in navigator) {
