--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             <h3>1. Trajanje glazbenog segmenta (od 1. do zadnjeg beata)</h3>
             <p class="help-text">Unesite trajanje **glazbenog dijela** vaše audio datoteke (HH:MM:SS:FF), bez tišine na početku i kraju.</p>
             <div class="duration-fields">
-                <input type="number" id="sati" value="0" min="0">
+                <input type="number" id="satiSegment" value="0" min="0">
                 <span class="colon">:</span>
-                <input type="number" id="minute" value="1" min="0" max="59">
+                <input type="number" id="minuteSegment" value="1" min="0" max="59">
                 <span class="colon">:</span>
-                <input type="number" id="sekunde" value="0" min="0" max="59">
+                <input type="number" id="sekundeSegment" value="0" min="0" max="59">
                 <span class="colon">:</span>
-                <input type="number" id="frameovi" value="0" min="0"> 
+                <input type="number" id="frameoviSegment" value="0" min="0">
             </div>
             <p class="help-text" id="fpsHelpText">Current FPS: 25</p>
         </div>
@@ -67,6 +67,20 @@
                 <input type="number" id="sekundeCijele" value="0" min="0" max="59">
                 <span class="colon">:</span>
                 <input type="number" id="frameoviCijele" value="0" min="0">
+            </div>
+        </div>
+
+        <div class="input-group duration-group">
+            <h3>3. Početak glazbenog segmenta unutar fizičke datoteke</h3>
+            <p class="help-text">Unesite **timecode od kojeg počinje glazbeni segment** (prvi takt, prvi beat) unutar *ukupne duljine fizičke datoteke* (HH:MM:SS:FF).</p>
+            <div class="duration-fields">
+                <input type="number" id="satiPocetakSegmenta" value="0" min="0">
+                <span class="colon">:</span>
+                <input type="number" id="minutePocetakSegmenta" value="0" min="0" max="59">
+                <span class="colon">:</span>
+                <input type="number" id="sekundePocetakSegmenta" value="0" min="0" max="59">
+                <span class="colon">:</span>
+                <input type="number" id="frameoviPocetakSegmenta" value="0" min="0">
             </div>
         </div>
         <div class="input-group">
@@ -85,8 +99,10 @@
             <p><strong>Broj frameova po beatu:</strong> <span id="rezultatFrameoviPoBeatu">0</span></p>
             <p><strong>Broj frameova po taktu:</strong> <span id="rezultatFrameoviPoTakatu">0</span></p>
             <p><strong>Postotak prilagodbe glazbe:</strong> <span id="rezultatPostotakPrilagodbe">0.00%</span></p>
-            <p><strong>Nova duljina glazbenog segmenta:</strong> <span id="rezultatNovaDuljina">00:00:00:00</span></p>
+            <p><strong>Nova duljina glazbenog segmenta:</strong> <span id="rezultatNovaDuljinaSegment">00:00:00:00</span></p>
             <p><strong>Nova ukupna duljina fizičke datoteke:</strong> <span id="rezultatNovaDuljinaCijele">00:00:00:00</span></p>
+            <p><strong>Novi početak segmenta:</strong> <span id="rezultatNoviPocetakSegmenta">00:00:00:00</span></p>
+            <p><strong>Novi kraj segmenta:</strong> <span id="rezultatNoviKrajSegmenta">00:00:00:00</span></p>
             <p class="napomena" id="rezultatBrojBeatova">Ukupni broj beatova za ovo trajanje (zaokruženo): 0</p>
         </div>
     </div>
