--- a/index.html
+++ b/index.html
@@ -22,90 +22,97 @@
     <div class="container">
         <h1>BPM Sinkronizacija za Video</h1>
 
-        <div class="input-group">
-            <label for="fiksniBPM">Fiksni (izmjereni) BPM:</label>
-            <input type="number" id="fiksniBPM" value="120" step="0.001">
-        </div>
-
-        <div class="input-group">
-            <label for="fpsSelect">Odaberite FPS:</label>
-            <select id="fpsSelect">
-                <option value="23.976">23.976</option>
-                <option value="24">24</option>
-                <option value="25" selected>25</option>
-                <option value="29.97">29.97</option>
-                <option value="30">30</option>
-                <option value="50">50</option>
-                <option value="59.94">59.94</option>
-                <option value="60">60</option>
-            </select>
-        </div>
-
-        <div class="input-group duration-group">
-            <h3>1. Ukupna duljina fizičke datoteke</h3>
-            <p class="help-text">Unesite **ukupno trajanje audio datoteke** (HH:MM:SS:FF) onako kako je vidite u svom video editoru, uključujući sve praznine.</p>
-            <div class="duration-fields">
-                <input type="number" id="satiCijele" value="0" min="0">
-                <span class="colon">:</span>
-                <input type="number" id="minuteCijele" value="1" min="0" max="59">
-                <span class="colon">:</span>
-                <input type="number" id="sekundeCijele" value="0" min="0" max="59">
-                <span class="colon">:</span>
-                <input type="number" id="frameoviCijele" value="0" min="0">
+        <div id="input-page" class="page active">
+            <div class="input-group">
+                <label for="fiksniBPM">Fiksni (izmjereni) BPM:</label>
+                <input type="number" id="fiksniBPM" value="120" step="0.001">
             </div>
-            <p class="help-text" id="fpsHelpText">Current FPS: 25</p>
-        </div>
 
-        <div class="input-group duration-group">
-            <h3>2. Timecode početka glazbenog segmenta</h3>
-            <p class="help-text">Unesite **timecode (HH:MM:SS:FF)** unutar fizičke datoteke od kojeg počinje glazbeni segment (npr. prvi takt, prvi beat).</p>
-            <div class="duration-fields">
-                <input type="number" id="satiPocetakSegmenta" value="0" min="0">
-                <span class="colon">:</span>
-                <input type="number" id="minutePocetakSegmenta" value="0" min="0" max="59">
-                <span class="colon">:</span>
-                <input type="number" id="sekundePocetakSegmenta" value="0" min="0" max="59">
-                <span class="colon">:</span>
-                <input type="number" id="frameoviPocetakSegmenta" value="0" min="0">
+            <div class="input-group">
+                <label for="fpsSelect">Odaberite FPS:</label>
+                <select id="fpsSelect">
+                    <option value="23.976">23.976</option>
+                    <option value="24">24</option>
+                    <option value="25" selected>25</option>
+                    <option value="29.97">29.97</option>
+                    <option value="30">30</option>
+                    <option value="50">50</option>
+                    <option value="59.94">59.94</option>
+                    <option value="60">60</option>
+                </select>
             </div>
-        </div>
 
-        <div class="input-group duration-group">
-            <h3>3. Timecode kraja glazbenog segmenta</h3>
-            <p class="help-text">Unesite **timecode (HH:MM:SS:FF)** unutar fizičke datoteke do kojeg traje glazbeni segment (npr. kraj zadnjeg takta, zadnjeg beata).</p>
-            <div class="duration-fields">
-                <input type="number" id="satiKrajSegmenta" value="0" min="0">
-                <span class="colon">:</span>
-                <input type="number" id="minuteKrajSegmenta" value="1" min="0" max="59">
-                <span class="colon">:</span>
-                <input type="number" id="sekundeKrajSegmenta" value="0" min="0" max="59">
-                <span class="colon">:</span>
-                <input type="number" id="frameoviKrajSegmenta" value="0" min="0">
+            <div class="input-group duration-group">
+                <h3>1. Ukupna duljina fizičke datoteke</h3>
+                <p class="help-text">Unesite **ukupno trajanje audio datoteke** (HH:MM:SS:FF) onako kako je vidite u svom video editoru, uključujući sve praznine.</p>
+                <div class="duration-fields">
+                    <input type="number" id="satiCijele" value="0" min="0">
+                    <span class="colon">:</span>
+                    <input type="number" id="minuteCijele" value="1" min="0" max="59">
+                    <span class="colon">:</span>
+                    <input type="number" id="sekundeCijele" value="0" min="0" max="59">
+                    <span class="colon">:</span>
+                    <input type="number" id="frameoviCijele" value="0" min="0">
+                </div>
+                <p class="help-text" id="fpsHelpText">Trenutni FPS: 25</p>
             </div>
+
+            <div class="input-group duration-group">
+                <h3>2. Timecode početka glazbenog segmenta</h3>
+                <p class="help-text">Unesite **timecode (HH:MM:SS:FF)** unutar fizičke datoteke od kojeg počinje glazbeni segment (npr. prvi takt, prvi beat).</p>
+                <div class="duration-fields">
+                    <input type="number" id="satiPocetakSegmenta" value="0" min="0">
+                    <span class="colon">:</span>
+                    <input type="number" id="minutePocetakSegmenta" value="0" min="0" max="59">
+                    <span class="colon">:</span>
+                    <input type="number" id="sekundePocetakSegmenta" value="0" min="0" max="59">
+                    <span class="colon">:</span>
+                    <input type="number" id="frameoviPocetakSegmenta" value="0" min="0">
+                </div>
+            </div>
+
+            <div class="input-group duration-group">
+                <h3>3. Timecode kraja glazbenog segmenta</h3>
+                <p class="help-text">Unesite **timecode (HH:MM:SS:FF)** unutar fizičke datoteke do kojeg traje glazbeni segment (npr. kraj zadnjeg takta, zadnjeg beata).</p>
+                <div class="duration-fields">
+                    <input type="number" id="satiKrajSegmenta" value="0" min="0">
+                    <span class="colon">:</span>
+                    <input type="number" id="minuteKrajSegmenta" value="1" min="0" max="59">
+                    <span class="colon">:</span>
+                    <input type="number" id="sekundeKrajSegmenta" value="0" min="0" max="59">
+                    <span class="colon">:</span>
+                    <input type="number" id="frameoviKrajSegmenta" value="0" min="0">
+                </div>
+            </div>
+
+            <div class="input-group">
+                <label for="mjeraTakta">Broj udaraca u taktu (npr. 4 za 4/4, 3 za 3/4):</label>
+                <select id="mjeraTakta">
+                    <option value="4" selected>4 (4/4)</option>
+                    <option value="3">3 (3/4)</option>
+                    <option value="2">2 (2/4)</option>
+                    <option value="6">6 (6/8)</option>
+                </select>
+            </div>
+
+            <button id="calculateButton">Izračunaj</button>
         </div>
 
-        <div class="input-group">
-            <label for="mjeraTakta">Broj udaraca u taktu (npr. 4 za 4/4, 3 za 3/4):</label>
-            <select id="mjeraTakta">
-                <option value="4" selected>4 (4/4)</option>
-                <option value="3">3 (3/4)</option>
-                <option value="2">2 (2/4)</option>
-                <option value="6">6 (6/8)</option>
-            </select>
-        </div>
-
-        <div id="rezultati" class="results-box">
-            <h3>Izračunani rezultati:</h3>
-            <p><strong>Varijabilni BPM:</strong> <span class="precizan-broj" id="rezultatVarijabilniBPM">0.0000</span></p>
-            <p><strong>Broj frameova po beatu:</strong> <span id="rezultatFrameoviPoBeatu">0</span></p>
-            <p><strong>Broj frameova po taktu:</strong> <span id="rezultatFrameoviPoTakatu">0</span></p>
-            <p><strong>Postotak prilagodbe glazbene datoteke:</strong> <span id="rezultatPostotakPrilagodbe">0.00%</span></p>
-            <p><strong>Izračunata originalna duljina segmenta:</strong> <span id="rezultatIzracunataOriginalnaDuljinaSegmenta">00:00:00:00</span></p>
-            <p><strong>Nova duljina glazbenog segmenta:</strong> <span id="rezultatNovaDuljinaSegment">00:00:00:00</span></p>
-            <p><strong>Nova ukupna duljina fizičke datoteke:</strong> <span id="rezultatNovaDuljinaCijele">00:00:00:00</span></p>
-            <p><strong>Novi timecode početka segmenta:</strong> <span id="rezultatNoviPocetakSegmenta">00:00:00:00</span></p>
-            <p><strong>Novi timecode kraja segmenta:</strong> <span id="rezultatNoviKrajSegmenta">00:00:00:00</span></p>
-            <p class="napomena" id="rezultatBrojBeatova">Ukupni broj beatova za ovo trajanje (zaokruženo): 0</p>
+        <div id="results-page" class="page">
+            <div id="rezultati" class="results-box">
+                <h3>Izračunani rezultati:</h3>
+                <p><strong>Varijabilni BPM:</strong> <span class="precizan-broj" id="rezultatVarijabilniBPM">0.0000</span></p>
+                <p><strong>Broj frameova po beatu:</strong> <span id="rezultatFrameoviPoBeatu">0</span></p>
+                <p><strong>Broj frameova po taktu:</strong> <span id="rezultatFrameoviPoTakatu">0</span></p>
+                <p><strong>Postotak prilagodbe glazbene datoteke:</strong> <span id="rezultatPostotakPrilagodbe">0.00%</span></p>
+                <p><strong>Izračunata originalna duljina segmenta:</strong> <span id="rezultatIzracunataOriginalnaDuljinaSegmenta">00:00:00:00</span></p>
+                <p><strong>Nova duljina glazbenog segmenta:</strong> <span id="rezultatNovaDuljinaSegment">00:00:00:00</span></p>
+                <p><strong>Nova ukupna duljina fizičke datoteke:</strong> <span id="rezultatNovaDuljinaCijele">00:00:00:00</span></p>
+                <p><strong>Novi timecode početka segmenta:</strong> <span id="rezultatNoviPocetakSegmenta">00:00:00:00</span></p>
+                <p><strong>Novi timecode kraja segmenta:</strong> <span id="rezultatNoviKrajSegmenta">00:00:00:00</span></p>
+                <p class="napomena" id="rezultatBrojBeatova">Ukupni broj beatova za ovo trajanje (zaokruženo): 0</p>
+            </div>
+            <button id="backButton">Natrag na unos</button>
         </div>
     </div>
 
