--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
                     </div>
                 <p id="noMarkersMessage" class="error-message" style="display:none;">Nisu potrebne korekcije tempa unutar dopuštenog drifta, ili nema dovoljno podataka za izračun.</p>
 
-                <button id="exportEdlButton">Generiraj EDL</button>
-            </div>
+                <button id="exportEdlButton" style="display:none;">Generiraj EDL</button> </div>
             <button id="backButton">Natrag na unos</button>
         </div>
     </div>
