--- a/index.html
+++ b/index.html
@@ -3,132 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BPM Sinkronizacija za Video</title>
+    <title>BPM Sync Helper</title>
     <link rel="stylesheet" href="style.css">
-
-    <link rel="manifest" href="/manifest.json">
-
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./service-worker.js')
-            .then(reg => console.log('Service Worker: Registered'))
-            .catch(err => console.log(`Service Worker: Error: ${err}`));
-        });
-      }
-    </script>
 </head>
 <body>
     <div class="container">
-        <h1>BPM Sinkronizacija za Video</h1>
+        <h1>BPM Sync Helper</h1>
 
         <div id="input-page" class="page active">
             <div class="input-group">
+                <label for="ediusXmlFile">Učitaj Edius XML s referentnim markerima:</label>
+                <input type="file" id="ediusXmlFile" accept=".xml">
+                <button id="clearXmlButton" style="display:none;">Poništi učitani XML</button>
+                <p id="xmlStatus" class="info-message" style="display:none;"></p>
+            </div>
+
+            <div class="input-group">
                 <label for="fiksniBPM">Fiksni (izmjereni) BPM glazbe:</label>
-                <input type="number" id="fiksniBPM" value="120" step="0.001">
+                <input type="number" id="fiksniBPM" step="0.0001" placeholder="Npr. 120.0000" min="0.001" value="120.0000">
+            </div>
+            <div class="input-group">
+                <label for="ciljaniBPM">Ciljani BPM videa:</label>
+                <input type="number" id="ciljaniBPM" step="0.0001" placeholder="Npr. 128.0000" min="0.001" value="128.0000">
             </div>
 
             <div class="input-group">
-                <label for="ciljaniBPM">Ciljani BPM za video (ako znate, inače isto kao izmjereni):</label>
-                <input type="number" id="ciljaniBPM" value="120" step="0.001">
-            </div>
-
-            <div class="input-group">
-                <label for="fpsSelect">Odaberite FPS:</label>
+                <label for="fpsSelect">FPS projekta:</label>
                 <select id="fpsSelect">
-                    <option value="23.976">23.976</option>
+                    <option value="23.976">23.976 (24p)</option>
                     <option value="24">24</option>
-                    <option value="25" selected>25</option>
-                    <option value="29.97">29.97</option>
+                    <option value="25" selected>25 (PAL)</option>
+                    <option value="29.97">29.97 (NTSC)</option>
                     <option value="30">30</option>
+                    <option value="47.952">47.952</option>
+                    <option value="48">48</option>
                     <option value="50">50</option>
                     <option value="59.94">59.94</option>
                     <option value="60">60</option>
                 </select>
+                <span class="help-text" id="fpsHelpText"></span>
             </div>
 
-            <div class="input-group duration-group">
-                <h3>1. Ukupna duljina fizičke datoteke (Video)</h3>
-                <p class="help-text">Unesite **ukupno trajanje video datoteke** (HH:MM:SS:FF).</p>
-                <div class="duration-fields">
-                    <input type="number" id="satiCijele" value="0" min="0">
-                    <span class="colon">:</span>
-                    <input type="number" id="minuteCijele" value="1" min="0" max="59">
-                    <span class="colon">:</span>
-                    <input type="number" id="sekundeCijele" value="0" min="0" max="59">
-                    <span class="colon">:</span>
-                    <input type="number" id="frameoviCijele" value="0" min="0">
+            <div class="input-group">
+                <label for="mjeraTakta">Mjera takta (koliko udaraca u taktu, npr. 4/4 = 4):</label>
+                <input type="number" id="mjeraTakta" value="4" min="1">
+            </div>
+
+            <div class="timecode-section">
+                <h3>Ručni unos Timecodeova (automatski se popunjava iz XML-a)</h3>
+                <p class="info-message" id="manualInputMessage">Unesite timecodeove ili učitajte XML datoteku.</p>
+
+                <div class="timecode-input" id="timecode-cijela">
+                    <h4>Ukupno trajanje fizičke datoteke:</h4>
+                    <input type="number" id="satiCijele" placeholder="HH" min="0" max="99" value="00">:<input type="number" id="minuteCijele" placeholder="MM" min="0" max="59" value="05">:<input type="number" id="sekundeCijele" placeholder="SS" min="0" max="59" value="00">:<input type="number" id="frameoviCijele" placeholder="FF" min="0" max="24" value="00">
                 </div>
-                <p class="help-text" id="fpsHelpText">Trenutni FPS: 25</p>
-            </div>
 
-            <div class="input-group duration-group">
-                <h3>2. Timecode početka glazbenog segmenta (Video Timecode)</h3>
-                <p class="help-text">Unesite **timecode (HH:MM:SS:FF)** u videu od kojeg počinje glazbeni segment (npr. prvi takt, prvi beat).</p>
-                <div class="duration-fields">
-                    <input type="number" id="satiPocetakSegmenta" value="0" min="0">
-                    <span class="colon">:</span>
-                    <input type="number" id="minutePocetakSegmenta" value="0" min="0" max="59">
-                    <span class="colon">:</span>
-                    <input type="number" id="sekundePocetakSegmenta" value="0" min="0" max="59">
-                    <span class="colon">:</span>
-                    <input type="number" id="frameoviPocetakSegmenta" value="0" min="0">
+                <div class="timecode-input" id="timecode-pocetak-segmenta">
+                    <h4>Timecode početka glazbenog segmenta:</h4>
+                    <input type="number" id="satiPocetakSegmenta" placeholder="HH" min="0" max="99" value="00">:<input type="number" id="minutePocetakSegmenta" placeholder="MM" min="0" max="59" value="00">:<input type="number" id="sekundePocetakSegmenta" placeholder="SS" min="0" max="59" value="00">:<input type="number" id="frameoviPocetakSegmenta" placeholder="FF" min="0" max="24" value="00">
                 </div>
-            </div>
 
-            <div class="input-group duration-group">
-                <h3>3. Timecode kraja glazbenog segmenta (Video Timecode)</h3>
-                <p class="help-text">Unesite **timecode (HH:MM:SS:FF)** u videu do kojeg traje glazbeni segment (npr. kraj zadnjeg takta, zadnjeg beata).</p>
-                <div class="duration-fields">
-                    <input type="number" id="satiKrajSegmenta" value="0" min="0">
-                    <span class="colon">:</span>
-                    <input type="number" id="minuteKrajSegmenta" value="1" min="0" max="59">
-                    <span class="colon">:</span>
-                    <input type="number" id="sekundeKrajSegmenta" value="0" min="0" max="59">
-                    <span class="colon">:</span>
-                    <input type="number" id="frameoviKrajSegmenta" value="0" min="0">
+                <div class="timecode-input" id="timecode-kraj-segmenta">
+                    <h4>Timecode kraja glazbenog segmenta:</h4>
+                    <input type="number" id="satiKrajSegmenta" placeholder="HH" min="0" max="99" value="00">:<input type="number" id="minuteKrajSegmenta" placeholder="MM" min="0" max="59" value="04">:<input type="number" id="sekundeKrajSegmenta" placeholder="SS" min="0" max="59" value="59">:<input type="number" id="frameoviKrajSegmenta" placeholder="FF" min="0" max="24" value="00">
                 </div>
             </div>
 
             <div class="input-group">
-                <label for="mjeraTakta">Broj udaraca u taktu (npr. 4 za 4/4, 3 za 3/4):</label>
-                <select id="mjeraTakta">
-                    <option value="4" selected>4 (4/4)</option>
-                    <option value="3">3 (3/4)</option>
-                    <option value="2">2 (2/4)</option>
-                    <option value="6">6 (6/8)</option>
-                </select>
+                <label for="pragDriftaFrameovi">Prag drifta (u frameovima) za generiranje markera:</label>
+                <input type="number" id="pragDriftaFrameovi" value="1" min="0">
             </div>
 
-             <div class="input-group">
-                <label for="pragDriftaFrameovi">Dopušteni drift (u frameovima) prije korekcije:</label>
-                <input type="number" id="pragDriftaFrameovi" value="1" min="0" step="1">
-            </div>
-
-            <button id="calculateButton">Izračunaj</button>
+            <button id="calculateButton">Izračunaj Markere</button>
         </div>
 
         <div id="results-page" class="page">
-            <div id="rezultati" class="results-box">
-                <h3>Pregled sinkronizacije:</h3>
-                <p><strong>Ciljani BPM (za video):</strong> <span class="precizan-broj" id="rezultatCiljaniBPM">0.0000</span></p>
-                <p><strong>Izmjereni (stvarni) BPM glazbe:</strong> <span class="precizan-broj" id="rezultatIzmjereniBPM">0.0000</span></p>
-                <p><strong>Ukupan broj ciljanih beatova u segmentu:</strong> <span id="rezultatUkupanBrojBeatovaCilj">0</span></p>
-                <p><strong>Ukupan broj stvarnih beatova u segmentu (izmjereni BPM):</strong> <span id="rezultatUkupanBrojBeatovaStvarno">0</span></p>
-                <p><strong>Ukupni drift na kraju segmenta:</strong> <span id="rezultatUkupniDrift">0</span></p>
-                <p class="napomena" id="rezultatNapomenaDrift"></p>
-                <hr>
-                <h3>Preporučene točke za ispravak tempa:</h3>
-                <p class="help-text">Ovo su timecodeovi u videu gdje glazba odstupa za više od dopuštenog drifta. Na ovim točkama trebali biste razmisliti o mikro-prilagodbi tempa glazbe u svom DAW-u/editoru.</p>
-                <div id="markeriZaIspravak" class="markers-list">
-                    </div>
-                <p id="noMarkersMessage" class="error-message" style="display:none;">Nisu potrebne korekcije tempa unutar dopuštenog drifta, ili nema dovoljno podataka za izračun.</p>
+            <h2>Rezultati proračuna</h2>
+            <div id="rezultati">
+                <p>Ciljani BPM videa: <span id="rezultatCiljaniBPM"></span></p>
+                <p>Izmjereni BPM glazbe: <span id="rezultatIzmjereniBPM"></span></p>
+                <p>Ukupan broj beatova (ciljani BPM): <span id="rezultatUkupanBrojBeatovaCilj"></span></p>
+                <p>Ukupan broj beatova (stvarni BPM): <span id="rezultatUkupanBrojBeatovaStvarno"></span></p>
+                <p>Ukupni drift na kraju segmenta: <span id="rezultatUkupniDrift"></span></p>
+                <p class="note" id="rezultatNapomenaDrift"></p>
 
-                <button id="exportEdlButton" style="display:none;">Generiraj EDL</button> </div>
-            <button id="backButton">Natrag na unos</button>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html>
+                <h3>Markeri za ispravak drifta:</h3>
+                <div id="markeriZaIspravak"></div>
