--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <h2>Rezultati proračuna</h2>
             <div id="markeriOutput" class="output-section">
             </div>
+            <button id="generateXmlButton" style="display:none;">Generiraj XML</button>
             <button id="downloadXmlButton" style="display:none;">Preuzmi XML</button>
             <div id="xmlOutput" class="output-section xml-output">
             </div>
